cmake_minimum_required(VERSION 3.16.3)
project(GraphsLib)

set(CMAKE_CXX_STANDARD 17)

file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIRS})

set(GRAPHS_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(GRAPHS_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
